--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": ">=5.6.4",
         "cartalyst/sentinel": "2.0.*",
         "doctrine/dbal": "^2.5",
+        "laravel/cashier": "~7.0",
         "laravel/framework": "5.4.*",
         "laravel/passport": "^2.0",
         "laravel/tinker": "~1.0"
